--- a/figures/accuracies.tex
+++ b/figures/accuracies.tex
@@ -1,6 +1,7 @@
 \multirow{3}{*}{Nouns} & Finnish & 1.0 (0.0) & 0.52 (0.32) & 1.0 & [0.95, 1.0]  \\
  & Turkish & 1.0 (0.0) & 0.54 (0.36) & 1.0 & [0.95, 1.0]  \\
- & Hungarian & 1.0 (0.0) & 0.41 (0.38) & 1.0 & [0.89, 1.0]  \\
+ & Hungarian & 1.0 (0.0) & 0.47 (0.37) & 1.0 & [0.95, 1.0]  \\
+\hline
 \multirow{7}{*}{Verbs} & Finnish & 0.4 (0.3) & 0.57 (0.38) & 0.43 & [0.34, 0.52]  \\
  & Hungarian & 0.95 (0.09) & 0.52 (0.4) & 0.81 & [0.72, 0.88]  \\
  & Turkish & 0.96 (0.09) & 0.52 (0.14) & 1.0 & [0.96, 1.0]  \\
