Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -332,7 +332,7 @@ Among open word classes, inflection commonly applies to verbs, nouns, and adject
 When adjectives are inflected, they often pattern with either verbs -- when they are used as predicates -- or nouns -- when they are used as attributes or independent nouns.
 We thus focus on nouns and verbs, treating adjectives together with one of the other classes depending on the language when appropriate (with verbs in Korean and Japanese; with nouns in Hungarian, Finnish, Turkish).
 
-\subsection{Universals of Noun Affixes}\label{sec:univ-nouns}
+\subsection{Universals of Noun Affix Ordering}\label{sec:univ-nouns}
 Nouns very commonly mark number and case morphologically.
 %Number marking typically distinguishes singular and plural (person -- person-s).
 %Case marking 
@@ -445,7 +445,7 @@ Stem-Plural-1sgPoss-Ablative\\
 % \end{figure}
 
 
-\subsection{Universals of Verb Affixes}\label{sec:univ-verbs}
+\subsection{Universals of Verb Affix Ordering}\label{sec:univ-verbs}
 Verbs commonly mark a larger number of inflection categories.
 Figures~\ref{tab:examples-verbs}--\ref{tab:examples-verbs} summarise the affixes in the verbal morphologies of the six languages considered here (see SI Section X for details on how we arrived at these summaries).
 Sesotho has both prefixes and suffices; we treat these separately, as we only aim to explain the relative distance of affixes from the base, not which side of the verb they appear on.
