Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -687,7 +687,7 @@ On active forms -- which, unlike the passive, are fully inflected for person and
   \end{minipage}
   \end{tabular}
   
-    \caption{Real and optimized ordering (nouns), Colors indicate universal position slots.}
+    \caption{Real and optimized ordering (nouns). Colors indicate universal position slots relevant for Greenbergs' Universal 39.}
     \label{fig:real_and_optimized_nouns}
 \end{figure}
 
