--- a/si-korean.tex
+++ b/si-korean.tex
@@ -43,24 +43,24 @@ Slot & Morphs & Short & Description & Citation \\ \hline\hline
 Derivation & \korean{하} & \textsc{ha}$_2$ &	  & \citep[4.1.2]{yeon2010korean}\\
 & \korean{이} & \textsc{i}$_2$ &	 & \citep[4.1.4]{yeon2010korean} \\ \hline
 Honorific & \korean{시} 	& \textsc{si}$_3$ & &\citep[4.3.2, 4.4.1]{yeon2010korean}\\\hline
-Tense/Asp. & \korean{었었} 	& ESSESS$_4$ &  & \citep[4.5.1.2]{yeon2010korean} \\
+	Tense/Asp. & \korean{었었} 	& \textsc{essess}$_4$ &  & \citep[4.5.1.2]{yeon2010korean} \\
 &\korean{겠} 	& \textsc{get}$_4$ & assertive & \citep[4.5.2.1]{yeon2010korean}\\
 & \korean{ㅆ} &\textsc{ess}$_4$ & past& \citep[4.5.1.1]{yeon2010korean}\\\hline
 Formality & \korean{ㅂ} &\textsc{p}$_5$ &	 formal-polite &\citep[4.3.2]{yeon2010korean}\\\hline
-Mood 1& \korean{리} & RI$_6$ &	 \\ % I-guess-
-&\korean{니} 	&NI$_6$ & See Table~\ref{tab:korean-hada-1} & \citep[4.3.2]{yeon2010korean}\\
-&\korean{ㄴ} 	&N$_6$ &See Table~\ref{tab:korean-hada-1}  \\\hline
-Mood 2& \korean{시다} & SIDA$_7$ & 	Hortative, formal, polite \\
-& \korean{어} 	& EO$_7$ & Indicative, informal\\
-& \korean{자} & JA$_7$&	 Hortative & \citep[4.3.6.3]{yeon2010korean}\\
-& \korean{소} &SO$_7$  &	See Table~\ref{tab:korean-styles} \\
-& \korean{ㄹ까} & LKKA$_7$& Interrogative & \citep[8.9]{yeon2010korean} \\
-& \korean{오} & O$_7$  & See Table~\ref{tab:korean-styles} \\
-& \korean{지} & JI$_7$ &	    & \citep[4.2.2-3]{yeon2010korean}\\
-& \korean{까} 	& KA$_7$ & Interrogative & \citep[4.3.4, p. 175; p. 183]{yeon2010korean} \\
-& \korean{라} &RA$_7$  &	 command & \citep[4.3.6.4]{yeon2010korean} \\
-& \korean{다} & DA$_7$ &	 Declarative & \citep[4.3.2]{yeon2010korean} &  \\\hline
-Polite & \korean{요} & YO$_8$&	 See Table~\ref{tab:korean-styles} \\
+	Mood 1& \korean{리} & \textsc{ri}$_6$ &	 \\ % I-guess-
+	&\korean{니} 	&\textsc{ni}$_6$ & See Table~\ref{tab:korean-hada-1} & \citep[4.3.2]{yeon2010korean}\\
+	&\korean{ㄴ} 	&\textsc{n}$_6$ &See Table~\ref{tab:korean-hada-1}  \\\hline
+	Mood 2& \korean{시다} & \textsc{sida}$_7$ & 	Hortative, formal, polite \\
+       & \korean{어} 	& \textsc{eo}$_7$ & Indicative, informal\\
+	& \korean{자} & \textsc{ja}$_7$&	 Hortative & \citep[4.3.6.3]{yeon2010korean}\\
+	& \korean{소} &\textsc{so}$_7$  &	See Table~\ref{tab:korean-styles} \\
+	& \korean{ㄹ까} & \textsc{lkka}$_7$& Interrogative & \citep[8.9]{yeon2010korean} \\
+	& \korean{오} & \textsc{o}$_7$  & See Table~\ref{tab:korean-styles} \\
+	& \korean{지} & \textsc{ji}$_7$ &	    & \citep[4.2.2-3]{yeon2010korean}\\
+	& \korean{까} 	& \textsc{ka}$_7$ & Interrogative & \citep[4.3.4, p. 175; p. 183]{yeon2010korean} \\
+	& \korean{라} &\textsc{ra}$_7$  &	 command & \citep[4.3.6.4]{yeon2010korean} \\
+	& \korean{다} & \textsc{da}$_7$ &	 Declarative & \citep[4.3.2]{yeon2010korean} &  \\\hline
+	Polite & \korean{요} & \textsc{yo}$_8$&	 See Table~\ref{tab:korean-styles} \\
 \end{tabular}
 }
 \caption{Frequent Korean verb suffixes in slots 1-8. The first column describes the nine slots. Second column: Representation of one allomorph in Hangeul. Third column: Identifier.}\label{tab:korean-frequent-morphemes}
@@ -173,7 +173,7 @@ Condition && \korean{하면} & \korean{해야, 하여야} \\
 	&& -\textsc{meyon}$_9$ & -\textsc{eoya}$_9$ \\ \hline
 Motive && \korean{하려고} \\
  && haryeogo \\
-&& -RYEOGO$_9$
+	&& -\textsc{ryeogo}$_9$
 \end{tabular}
 	\end{center}
 	\caption{Continuation of Table~\ref{tab:korean-hada-1}: Forms of \textit{hada} with a conjunctive ending.}\label{tab:korean-hada-2}
@@ -258,4 +258,4 @@ Motive && \korean{하려고} \\
 %\end{longtable}
 
 
-TODO describe exceptions to the slot-based ordering
+
