--- a/name.tex
+++ b/name.tex
@@ -257,67 +257,68 @@ The memory capacity is formalized as the average number of bits required to enco
     \operatorname{H}[m_t] := - \sum_m P(m_t = m) \log_2 P(m_t=m)
 \end{equation*}
 where $m$ runs over possible memory states.
-\citet{Hahn2020modeling} prove that there is a tradeoff between, on the one hand, the average surprisal $S\_M$, obtained by averaging $- \log P(w_t , m_t)$ across the words in a text, and the memory capacity $\operatorname{H}[m_t]$.
+\citet{Hahn2020modeling} prove that there is a tradeoff between, on the one hand, the average surprisal $S_M$, obtained by averaging $- \log P(w_t , m_t)$ across the words in a text, and the memory capacity $\operatorname{H}[m_t]$.
 
 %\mhahn{at this point illustrate with a figure?}
 
-Different orderings can lead to different tradeoffs that can differ in their efficiency (Figure~\ref{fig:tradeoff}).
-The efficiency of a tradeoff curve can be quantified using its Area under the Curve (AUC) \citet{Hahn2020modeling}. Lower values of AUC indicate a steeper decay of mutual information, and thus a more efficient tradeoff (Figure~\ref{fig:tradeoff}).
-Based on this notion, \citet{Hahn2020modeling} propose that human language orders elements in such a way that the memory-surprisal tradeoff curve has a particularly steep fall-off, compared to other possible orderings.
+Different orderings can lead to different tradeoffs that can differ in their efficiency (Figure~\ref{fig:tradeoff}): Tradeoffs are more efficient when comprehenders can achieve lower surprisal at the same amount of memoty.
+The efficiency of a tradeoff curve can be quantified using its Area under the Curve (AUC) \citet{Hahn2020modeling}: there is a smaller area under a more efficient tradeoff curve, such as that of Language A in Figure~\ref{fig:tradeoff}.
+%Lower values of AUC indicate a steeper decay of mutual information, and thus a more efficient tradeoff (Figure~\ref{fig:tradeoff}).
+\citet{Hahn2020modeling} propose that human language orders elements in such a way that the memory-surprisal tradeoff is particularly efficient, compared to other possible orderings.
 
 \begin{figure}
     \centering
-    \mhahn{TODO visualize the memory-surprisal tradeoff}
-    \caption{\mhahn{my plan for this figure is (i) curves for two languages A,B to show that tradeoffs can differ in their efficiency, (ii) a simple visualization of how AUC captures efficiency, (iii) a visualiation of MI $I_t$, (iv) a visualization of how the tradeoff curve is estimated based on $I_t$., (v) some kind of illustration of how locality leads to more efficient tradeoffs}}
+    \includegraphics[width=0.5\textwidth]{figures/tradeoff.pdf}
+    \caption{The memory-surprisal tradeoff in two hypothetical languages: In order to achieve a given level of surprisal, a comprehender has to invest a given amount of memory resources, which can be quantified information-theoretically in terms of bits. In this case, Language A provides a more efficient tradeoff because comprehenders can achieve lower surprisals at the same levels of memory load, compared to Language B.}
+    %\mhahn{my plan for this figure is (i) curves for two languages A,B to show that tradeoffs can differ in their efficiency, (ii) a simple visualization of how AUC captures efficiency, (iii) a visualiation of MI $I_t$, (iv) a visualization of how the tradeoff curve is estimated based on $I_t$., (v) some kind of illustration of how locality leads to more efficient tradeoffs}}
     \label{fig:tradeoff}
 \end{figure}
 
 
 To test this hypothesis, \citet{Hahn2020modeling} provide a method for estimating a bound on the memory-surprisal tradeoff from corpus data.
-This method is based on the notion of mutual information, which quantifies the amount of statistical association between two random variables.
-If $X, Z, Y$ are random variables, then the mutual information of $X$ and $Y$, conditioned on $Z$, is defined to be:
-\begin{align}
-\label{eq:mi}
-    \operatorname{I}[X:Y|Z] &\equiv \sum_{x,y,z} P(x,y,z) \log \frac{P(x,y,z)}{P(x,z)P(y,z)}. % \text{ bits} \\
-    %\nonumber
-    %&= \operatorname{H}[X,Z] - \operatorname{H}[X,Y,Z] \\
-    %\nonumber
-    %&= \operatorname{H}[Y,Z] - \operatorname{H}[Y,X,Z].
-\end{align}
-The key quantity derived from this is the mutual information between elements (such as morphemes) that are some distance $t$, conditioned on the intervening elements:
-\begin{equation*}
-    I_t \equiv \operatorname{I}[w_t : w_0 | w_1, \dots, w_{t-1}].
-\end{equation*}
-This is visualized in Figure~\ref{fig:tradeoff} (left): $I_t$ This quantifies how much predictive information the element $t$ steps into the past provides about the next element, on average across all sequences in the language.
-Based on this notion, \citet{Hahn2020modeling}  prove the following bound on the memory-surprisal tradeoff, visualized in Figure~\ref{fig:tradeoff} (center):
-\mhahn{QUESTION: I'm wondering whether it is necessary to explain the theorem formally, or whether there might be a benefit in being a bit less formal here and only doing a pictorial presentation, referring to the PsychReview paper for the formal detai;s.}
-\begin{thm}\label{prop:suboptimal}(Information locality bound, \citet{Hahn2020modeling})
-For any positive integer $T$, let $M$ be a memory encoding function such that
-\begin{equation}
-\label{eq:memory-bound}
-\operatorname{H}[m_t] \le \sum_{t=1}^T t I_t.
-\end{equation}
-Then we have a lower bound on the average surprisal $S_M$ under the memory encoding function $M$:
-\begin{equation}
-\label{eq:surprisal-bound}
-S_M \ge S_\infty + \sum_{t=T+1}^\infty I_t.
-\end{equation}
-where $S_\infty$ is the average surprisal that would be achieved with perfectly veridical memory representations.
-\end{thm}
-Figure~\ref{fig:tradeoff} (right) visualizes a key consequence of this theorem, namely an information-theoretic notion of locality called Information locality:
-Orderings optimize this tradeoff when elements with high mutual information are closer together.
-
-Information locality has had success as a predictor of word order \citep{futrell2019information}, in particular for universals of the order inside noun phrases \citep{culbertson2020from,hahn-information-theoretic-2018,DBLP:conf/acl/FutrellDS20}.
-
-
-
-\citet{Hahn2020modeling} argue that information locality derives a range of locality principles proposed in the linguistic literature.
-They provide evidence that it predicts closeness of syntactically related words.
-They also provide preliminary evidence that it accounts for some properties of morpheme ordering and formalizes \cite{bybee-morphology-1985}'s idea that morphemes are closer together when they are more relevant to each other, using data of verb inflection in two languages (Japanese and Sesotho).
-
-
+This method is based on the notion of mutual information \citep{cover2006elements}, which quantifies the amount of statistical association between two random variables.
+They show that tradeoffs are more efficient when elements are more strongly predicted by other nearby elements.
+They argue that this information-theoretic notion of locality derives a range of locality principles proposed in the linguistic literature.
+Beyond providing evidence that word orders provide efficient tradeoffs, they also provide preliminary evidence that it accounts for some properties of morpheme ordering and formalizes \cite{bybee-morphology-1985}'s idea that morphemes are closer together when they are more relevant to each other, using data of verb inflection in two languages (Japanese and Sesotho).
 
 In this work, we aim to test the Memory-Surprisal Tradeoff as a predictor of morpheme ordering more broadly, using data from more languages and from different parts of speech.
+
+
+%If $X, Z, Y$ are random variables, then the mutual information of $X$ and $Y$, conditioned on $Z$, is defined to be:
+%\begin{align}
+%\label{eq:mi}
+ %   \operatorname{I}[X:Y|Z] &\equiv \sum_{x,y,z} P(x,y,z) \log \frac{P(x,y,z)}{P(x,z)P(y,z)}. % \text{ bits} \\
+ %   %\nonumber
+ %   %&= \operatorname{H}[X,Z] - \operatorname{H}[X,Y,Z] \\
+ %   %\nonumber
+ %   %&= \operatorname{H}[Y,Z] - \operatorname{H}[Y,X,Z].
+%\end{align}
+%The key quantity derived from this is the mutual information between elements (such as morphemes) that are some distance $t$, conditioned on the intervening elements:
+%\begin{equation*}
+ %   I_t \equiv \operatorname{I}[w_t : w_0 | w_1, \dots, w_{t-1}].
+%\end{equation*}
+%This is visualized in Figure~\ref{fig:tradeoff} (left): $I_t$ This quantifies how much predictive information the element $t$ steps into the past provides about the next element, on average across all sequences in the language.
+%Based on this notion, \citet{Hahn2020modeling}  prove the following bound on the memory-surprisal tradeoff, visualized in Figure~\ref{fig:tradeoff} (center):
+%\mhahn{QUESTION: I'm wondering whether it is necessary to explain the theorem formally, or whether there might be a benefit in being a bit less formal here and only doing a pictorial presentation, referring to the PsychReview paper for the formal detai;s.}
+%\begin{thm}\label{prop:suboptimal}(Information locality bound, \citet{Hahn2020modeling})
+%For any positive integer $T$, let $M$ be a memory encoding function such that
+%\begin{equation}
+%\label{eq:memory-bound}
+%\operatorname{H}[m_t] \le \sum_{t=1}^T t I_t.
+%\end{equation}
+%Then we have a lower bound on the average surprisal $S_M$ under the memory encoding function $M$:
+%\begin{equation}
+%\label{eq:surprisal-bound}
+%S_M \ge S_\infty + \sum_{t=T+1}^\infty I_t.
+%\end{equation}
+%where $S_\infty$ is the average surprisal that would be achieved with perfectly veridical memory representations.
+%\end{thm}
+%Figure~\ref{fig:tradeoff} (right) visualizes a key consequence of this theorem, namely an information-theoretic notion of locality called Information locality:
+%Orderings optimize this tradeoff when elements with high mutual information are closer together.
+
+%Information locality has had success as a predictor of word order \citep{futrell2019information}, in particular for universals of the order inside noun phrases \citep{culbertson2020from,hahn-information-theoretic-2018,DBLP:conf/acl/FutrellDS20}.
+
+
 
 
 
@@ -358,31 +359,31 @@ This universal is supported by the example in Figure~\ref{fig:noun-inflection}.
 
 
 \begin{figure}
-\begin{tabular}{lllllllll}
-\textit{juttu-i-hi-si} \\
-Stem-Plural-Illative-2SgPoss \\
-`into your stories' (Finnish)
-\end{tabular}
-\begin{tabular}{lllllllll}
-	\textit{{\'e}rv-ei-k-et} \\
-Stem-Plural-3rdPlurPoss-Accusative \\
-`their arguments' (Hungarian)
-\end{tabular}
-\begin{tabular}{lllllllll}
-\textit{hareket-ler-im-den} \\
-Stem-Plural-1sgPoss-Ablative\\
-`from my actions' (Turkish) \\
-\end{tabular}
+\includegraphics[width=0.8\textwidth]{figures/noun-morphemes.pdf}
+%\begin{tabular}{lllllllll}
+%\textit{juttu-i-hi-si} \\
+%%Stem-Plural-Illative-2SgPoss \\
+%`into your stories' (Finnish)
+%\end{tabular}
+%\begin{tabular}{lllllllll}
+%	\textit{{\'e}rv-ei-k-et} \\
+%Stem-Plural-3rdPlurPoss-Accusative \\
+%`their arguments' (Hungarian)
+%\end{tabular}
+%\begin{tabular}{lllllllll}
+%\textit{hareket-ler-im-den} \\
+%Stem-Plural-1sgPoss-Ablative\\
+%`from my actions' (Turkish) \\
+%\end{tabular}
 
-%\mhahn{TODO make this a nice illustration of noun inflection appropriate for the audience}
 
-\caption{Noun inflection in the three languages in our sample. All three languages support Greenberg's Universal 39 by placing the case marker after the plural marker, but they differ in theplacement of the possessive marker. \mhahn{TODO make this look nicer, including color coding}}\label{fig:noun-inflection}
+\caption{Noun inflection in the three languages in our sample. All three languages support Greenberg's Universal 39 by placing the case marker after the plural marker, but they differ in theplacement of the possessive marker. \mhahn{TODO make this look nicer}}\label{fig:noun-inflection}
 \end{figure}
 
 
 
  \begin{figure}
-      \includegraphics[width=\textwidth]{figures/Screenshot from 2021-03-16 10-43-10.png}
+      \includegraphics[width=\textwidth]{figures/verb-morphemes.pdf}
  
 %     Valence:
 %\begin{tabular}{lllll}
@@ -431,8 +432,8 @@ Stem-Plural-1sgPoss-Ablative\\
 %& `I/you (sgd)/we/you (pl) open'
 %\end{tabular}
 
-\mhahn{TODO make this rough draft look nice, and make it cover all languages}
-\caption{Examples of verb inflection from the six languages in our sample.}\label{tab:examples-verbs}
+\mhahn{TODO make this rough draft look nice}
+\caption{Examples of verb inflection from the six languages in our sample. Colors indicate universal morpheme slots.}\label{tab:examples-verbs}
 \end{figure}
  
  
@@ -468,11 +469,11 @@ verb stem & valence & voice & TAM & subject agreement
 \end{adjustwidth}
 
 \textit{Valence} affixes (red in Figure~\ref{tab:examples-verbs}) change the number of arguments. A very common type of valence affix is a causative, which adds an argument indicating who causes an event or state to occur \citep{wals-111}.
-\textit{Voice} (green in Figure~\ref{tab:examples-verbs}) describes the distinction between active and passive (CITE). % An example is the Japanese passive suffix -\textit{(r)are}- (Figure~\ref{tab:examples-verbs}).
+\textit{Voice} (green in Figure~\ref{tab:examples-verbs}) describes the distinction between active and passive. % An example is the Japanese passive suffix -\textit{(r)are}- (Figure~\ref{tab:examples-verbs}).
 \textit{Tense-Aspect-Mood (TAM)} (blue in Figure~\ref{tab:examples-verbs}) comprises three types of categories.
 \textit{Aspect} describes how an event unfolds over time \citep{comrie1976aspect,dahl1985tense,binnick1991time}.
 %An example of aspect marking is the English progressive \textit{to be} ...-\textit{ing}, which indicates that an action is currently ongoing \citep{huddleston-cambridge-2002}.
-\textit{Tense} describes where an event is located in time (e.g. past or future, CITE).
+\textit{Tense} describes where an event is located in time (e.g. past or future).
 %Examples of tense and aspect marking are shown in Figure~\ref{tab:examples-verbs}.
 \textit{Mood} describes a relation between an event and the speaker, including an assessment of the event's reality \cite{palmer1986mood,portner2018mood}.
 %In analytical languages such as English, mood distinctions are often indicated using verbs such as \textit{might} or adverbs such as \textit{possibly}.
@@ -501,10 +502,10 @@ Figure~\ref{tab:examples-verbs} shows that the languages in our sample largely s
 
 
 While these are particularly common types of affixes, there are further types, some of which occur in the six languages of our sample.
-While agreement is most commonly established with the subject, \textit{agreement with the object} is found in Sesotho \citep{doke1967textbook} (in person and noun class) and in Hungarian \citep{rounds2001hungarian} (in definiteness); it is fused with subject agreement in the Hungarian and shares a slot with Valence in Sesotho (see SI Section TODO).
+While agreement is most commonly established with the subject, \textit{agreement with the object} is found in Sesotho \citep{doke1967textbook} (in person and noun class) and in Hungarian \citep{rounds2001hungarian} (in definiteness); it is fused with subject agreement in the Hungarian and shares a slot with Valence in Sesotho (see SI Sections S1).
 \textit{Polarity} refers to the opposition between affirmative (e.g. `she arrived') and negative  (e.g., `she did not arrive') statements \citep{wals-112}.
 \textit{Evidentiality} indicates on what evidence a speaker bases an assertion \citep{aikhenvald2003evidentiality}.
-\textit{Formality}, \text{honorifics}, and \text{politeness} are categories that index social relations between the speaker, the addressee, and the topic of the conversation (CITE).
+\textit{Formality}, \text{honorifics}, and \text{politeness} are categories that index social relations between the speaker, the addressee, and the topic of the conversation~\citep{hasegawa2014japanese, yeon2010korean}.
 In our sample, these are prominent in Korean and Japanese.
 The Japanese politeness marker -masu- and the Korean formality (-p) and politeness (-yo) suffixes index the social relation between the speaker and the addressee \citep{hasegawa2014japanese, yeon2010korean}; the Korean honorific suffix -si- indexes the social relation between the speaker and the topic of the conversation \citep{yeon2010korean}.
 Furthermore, verb forms can have affixes indicating the syntactic position of the verb within a sentence, in particular, affixes marking infinitives or other nonfinite forms.
@@ -578,6 +579,9 @@ We estimated memory-surprisal tradeoffs and computationally optimized orderings 
 %https://en.wiktionary.org/wiki/%EB%B0%94%EB%9D%BC%EB%8B%A4
 
 \section{Results}
+
+\mhahn{TODO one thing that has to become a bit clearer is that we are explaining a substantial amount of copmplexity beyond the universals. We could also compare to baselines based on the universals. E.g. in Korean there is a huge amount of variance explained by AUC optimization even though not much happens in terms of the universals.}
+
 Figures \ref{fig:auc_verbs} and \ref{fig:auc_nouns} show area under the curve (AUC) plots for random orders as compared to the real, natural order of morphemes for verbs and nouns, respectively.
 %Here, AUC refers to the area under the curve for the memory-surprisal tradeoff for each order, where the lower the AUC is, the more efficient that memory-surprisal tradeoff is.
 In most languages, and for both nouns and verbs, real orderings have lower AUC than the vast majority of random baseline orderings, close to the computationally optimized orderings meaning that they enable more efficient memory-surprisal tradeoffs than most of the $N!$ possible orderings.
@@ -591,8 +595,8 @@ We defined three measures of agreement:
 Finally, \textit{Full (Types)} is analogous to \textit{Full} but only counts words that appear multiple times only once, in order to control for the possible effect of individual highly frequent forms.
 
 
-For nouns, the agreement between real and optimized orderings is perfect, far above the agreement with baseline grammars. % (TODO stats. how many baseline grammars are outperformed by optimized?).
-For verbs, agreement between real and optimized orderings is above 90\% for Hungarian, Turkish, Korean, Japanese, and Sesotho prefixes, better than at least 80\% of the baseline grammars. % (TODO stats).
+For nouns, the agreement between real and optimized orderings is perfect, far above the agreement with baseline grammars. 
+For verbs, agreement between real and optimized orderings is above 90\% for Hungarian, Turkish, Korean, Japanese, and Sesotho prefixes, better than at least 80\% of the baseline grammars. 
 For Sesotho suffixes, agreement is lower, though still better than 82\% of baselines.
 In Finnish, agreement between real and optimzed orderings is similar to agreement between real and baseline orderings (see below for discussion).
 
@@ -882,7 +886,7 @@ Causative adds an argument indicating who makes an object freeze, and passive th
 A priori, semantic scope is different from mutual information.
 However, there are arguments that scope relations correlate with mutual information.
 \citet{culbertson2020from} made a related argument for the order of nominal modifiers as in ``the four green books'', where mutual information predicts the order of attachment of modifiers to the noun.
-Furthermore, if the semantic propositions that speakers communicate are modeled using a probabilistic language-of-thought grammar such as CITE, mutual information will also correlate with scope ordering (see SI Appendix Section X for a simulation study).
+%Furthermore, if the semantic propositions that speakers communicate are modeled using a probabilistic language-of-thought grammar such as mutual information will also correlate with scope ordering (see SI Appendix Section S4 for a simulation study).
 
 
 
@@ -901,7 +905,7 @@ This has an interesting relation to mutual information:
 If the compound form is very frequent, in relation to the baseline frequencies of the base and the affix, then there is high (pointwise) mutual information between them.
 
 Most closely related to our proposal, \citet{inkelas2016affix} proposed that morphemes are ordered together when they are informative about each other.
-They considered a notion of informativity introduced by \citet{priva2017informativity}, which is different from but related to the mutual information between adjacent morphemes $I_1$ (see SI Appendix Section TODO for details).
+They considered a notion of informativity introduced by \citet{priva2017informativity}, which is different from but related to the mutual information between adjacent morphemes $I_1$ (see SI Appendix Section S3 for details).
 %Formally (drawing on the notion of informativity defined by \citet{priva2017informativity}), they considered the informativity between a suffix $S_i$ and the preceding $S_{i-1}$ as 
 %\begin{equation}
 %    \sum_{S_{i-1}, S_{i}} \frac{P(S_{i-1} , S_i)}{P(S_i)} \log P(S_i | S_{i-1})
