--- a/figures/accuracies.tex
+++ b/figures/accuracies.tex
@@ -1,11 +1,11 @@
-\multirow{3}{*}{Nouns} & Finnish & 1.0 (0.0) & 0.52 (0.32) & 1.0  [0.95, 1.0]  & 1.0  [0.71, 1.0]  \\
- & Turkish & 1.0 (0.0) & 0.54 (0.36) & 1.0  [0.96, 1.0]  & 1.0  [0.86, 1.0]  \\
- & Hungarian & 1.0 (0.0) & 0.47 (0.37) & 1.0  [0.95, 1.0]  & 1.0  [0.93, 1.0]  \\
+\multirow{3}{*}{Nouns} & Finnish & 1.0 (0.0) & 0.52 (0.32) & 1.0  [0.95, 1.0]  & 0.95 (0.09) &  1.0  [0.71, 1.0]  \\
+ & Turkish & 1.0 (0.0) & 0.54 (0.36) & 1.0  [0.96, 1.0]  & 0.64 (0.25) &  1.0  [0.86, 1.0]  \\
+ & Hungarian & 1.0 (0.0) & 0.49 (0.39) & 1.0  [0.98, 1.0]  & 0.75 (0.24) &  1.0  [0.95, 1.0]  \\
 \hline
-\multirow{7}{*}{Verbs} & Finnish & 0.4 (0.3) & 0.57 (0.38) & 0.43  [0.34, 0.52]  & 0.0  [0.0, 0.12]  \\
- & Hungarian & 0.95 (0.09) & 0.52 (0.39) & 0.81  [0.74, 0.87]  & 0.0  [0.0, 0.05]  \\
- & Turkish & 0.96 (0.09) & 0.52 (0.14) & 1.0  [0.96, 1.0]  & 0.89  [0.77, 0.96]  \\
- & Korean & 0.97 (0.1) & 0.55 (0.24) & 1.0  [0.95, 1.0]  & 0.93  [0.79, 0.98]  \\
- & Japanese & 0.95 (0.0) & 0.48 (0.24) & 1.0  [0.85, 1.0]  & 1.0  [0.81, 1.0]  \\
- & Sesotho (P) & 0.98 (0.0) & 0.56 (0.48) & 0.77  [0.65, 0.86]  & 0.48  [0.29, 0.67]  \\
- & Sesotho (S) & 0.62 (0.0) & 0.46 (0.2) & 0.83  [0.76, 0.89]  & 0.85  [0.73, 0.92]  \\
+\multirow{7}{*}{Verbs} & Finnish & 0.4 (0.3) & 0.57 (0.38) & 0.43  [0.34, 0.52]  & 0.98 (0.1) &  0.0  [0.0, 0.12]  \\
+ & Hungarian & 0.95 (0.09) & 0.52 (0.39) & 0.81  [0.74, 0.87]  & 0.97 (0.1) &  0.0  [0.0, 0.05]  \\
+ & Turkish & 0.96 (0.09) & 0.52 (0.14) & 1.0  [0.96, 1.0]  & 0.81 (0.06) &  0.89  [0.77, 0.96]  \\
+ & Korean & 0.97 (0.1) & 0.55 (0.22) & 1.0  [0.96, 1.0]  & 0.78 (0.11) &  0.96  [0.88, 0.99]  \\
+ & Japanese & 0.95 (0.0) & 0.48 (0.24) & 1.0  [0.85, 1.0]  & 0.85 (0.13) &  1.0  [0.81, 1.0]  \\
+ & Sesotho (P) & 0.98 (0.0) & 0.56 (0.48) & 0.77  [0.65, 0.86]  & 0.98 (0.0) &  0.48  [0.29, 0.67]  \\
+ & Sesotho (S) & 0.62 (0.0) & 0.46 (0.2) & 0.83  [0.76, 0.89]  & 0.45 (0.24) &  0.85  [0.73, 0.92]  \\
