Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -653,7 +653,7 @@ On active forms -- which, unlike the passive, are fully inflected for person and
     &
     \includegraphics[width=0.3\textwidth]{figures/hungarian_nouns/suffixes-byMorphemes-auc-hist-heldout-Coarse-FineSurprisal-optimized.pdf}
     \end{tabular}
-    \caption{AUC Histograms for Noun Suffixes: We show a smoothed histogram of baseline orderings, and the AUC values for optimized, real, and reverse orderings. For the real orderings, we also indicate what fraction of baseline grammars have higher AUC, with a Binomial confidence interval. Note that real and optimizesd orders and identical and thus indistinguishible in this figure.}
+    \caption{AUC Histograms for Noun Suffixes: We show a smoothed histogram of baseline orderings, and the AUC values for optimized, real, and reverse orderings. For the real orderings, we also indicate what fraction of baseline grammars have higher AUC, with a Binomial confidence interval. Note that real and optimizesd orders and identical and thus indistinguishible in this figure. \mhahn{could think about making this a small violin plot for each language, instead of providing numerical hard-to-think-about quantile infoemation}}
     \label{fig:auc_nouns}
 \end{figure}
 
