Updates from Overleaf

--- a/name.tex
+++ b/name.tex
@@ -319,6 +319,7 @@ In this work, we aim to test the Memory-Surprisal Tradeoff as a predictor of mor
 %Information locality has had success as a predictor of word order \citep{futrell2019information}, in particular for universals of the order inside noun phrases \citep{culbertson2020from,hahn-information-theoretic-2018,DBLP:conf/acl/FutrellDS20}.
 
 
+\mhahn{I'm pondering to what extent it would be helpful to expound on the connection between the tradeoff and locality, to make the link to Bybee.}
 
 
 
@@ -615,7 +616,7 @@ On active forms -- which, unlike the passive, are fully inflected for person and
 %Taking a step back and looking at all of these languages at a whole, we see that the languages' optimized orders tend to closely mirror Bybee's universal ordering, which also means that these languages also have a high level of agreement between them on the relative ordering of verbal morphemes. As such, it's possible to predict Bybee's universal ordering from looking at commonalities between optimized orders of natural languages. 
 
 
-\mhahn{TODO make clear that we are explaining the universals and language-specific patterns beyond those}
+%\mhahn{TODO make clear that we are explaining the universals and language-specific patterns beyond those}
 
 %\becky{conclude}
 
@@ -1030,7 +1031,7 @@ We have tested the recently proposed Efficient Tradeoff Hypothesis as a predicto
 We found that attested morpheme orders provide more efficient tradeoffs than most other possible orderings and that many properties of observed orderings are recovered by optimizing for tradeoff efficiency.
 With the exception of verb inflection in Finnish and Sesotho, we found that optimized orderings agree with the attested orderings in more than 90\% of forms found in corpora.
 Optimization also successfully predicts several universals of morpheme ordering, both for nouns and verbs.
-These results suggest that morpheme ordering reflects optimization pf processing efficiency across languages.
+These results suggest that morpheme ordering reflects optimization of processing efficiency across languages.
 %\jd{add concluding sentence tying all together}
 
 
