--- a/figures/sesotho_prefixes/comparison.tex
+++ b/figures/sesotho_prefixes/comparison.tex
@@ -6,22 +6,22 @@ block/.style = {draw, fill=blue!30, align=center, anchor=west,
 ball/.style = {circle, draw, align=center, anchor=north, inner sep=0}]
 \node[rectangle,text width=1.2cm,anchor=base] (A0) at (1,-0.3) {Real};
 \node[rectangle,text width=0.9cm,anchor=base] (B0) at (4,-0.3) {Optimized};
-\node[rectangle,text width=1.2cm,anchor=base, fill=purple!20] (A1) at (1,-1.0) {Subject};
+\node[rectangle,text width=1.2cm,anchor=base] (A1) at (1,-1.0) {Subject};
 \node[rectangle,text width=1.2cm,anchor=base] (A2) at (1,-1.5) {Negation};
-\node[rectangle,text width=1.2cm,anchor=base, fill=blue!20] (A3) at (1,-2.0) {Tense/aspect};
+\node[rectangle,text width=1.2cm,anchor=base] (A3) at (1,-2.0) {Tense/aspect};
 \node[rectangle,text width=1.2cm,anchor=base] (A4) at (1,-2.5) {Int/Rel};
 \node[rectangle,text width=1.2cm,anchor=base] (A5) at (1,-3.0) {Infinitive};
-\node[rectangle,text width=1.2cm,anchor=base, fill=orange!20] (A6) at (1,-3.5) {Object/reflexive};
+\node[rectangle,text width=1.2cm,anchor=base] (A6) at (1,-3.5) {Object/reflexive};
 \node[rectangle,text width=1.2cm,anchor=base] (B1) at (4,-1.0) {Infinitive};
-\node[rectangle,text width=1.2cm,anchor=base, fill=purple!20] (B2) at (4,-1.5) {Subject};
-\node[rectangle,text width=1.2cm,anchor=base, fill=blue!20] (B3) at (4,-2.0) {Tense/aspect};
-\node[rectangle,text width=1.2cm,anchor=base] (B4) at (4,-2.5) {Negation};
-\node[rectangle,text width=1.2cm,anchor=base, fill=orange!20] (B5) at (4,-3.0) {Object/reflexive};
-\node[rectangle,text width=1.2cm,anchor=base] (B6) at (4,-3.5) {Int/Rel};
+\node[rectangle,text width=1.2cm,anchor=base] (B2) at (4,-1.5) {Subject};
+\node[rectangle,text width=1.2cm,anchor=base] (B3) at (4,-2.0) {Tense/aspect};
+\node[rectangle,text width=1.2cm,anchor=base] (B4) at (4,-2.5) {Int/Rel};
+\node[rectangle,text width=1.2cm,anchor=base] (B5) at (4,-3.0) {Negation};
+\node[rectangle,text width=1.2cm,anchor=base] (B6) at (4,-3.5) {Object/reflexive};
 \draw[->] (A1.east) to (B2.west);
-\draw[->] (A2.east) to (B4.west);
+\draw[->] (A2.east) to (B5.west);
 \draw[->] (A3.east) to (B3.west);
-\draw[->] (A4.east) to (B6.west);
+\draw[->] (A4.east) to (B4.west);
 \draw[->] (A5.east) to (B1.west);
-\draw[->] (A6.east) to (B5.west);
+\draw[->] (A6.east) to (B6.west);
 \end{tikzpicture}
