--- a/figures/hungarian_verbs/comparison.tex
+++ b/figures/hungarian_verbs/comparison.tex
@@ -6,15 +6,15 @@ block/.style = {draw, fill=blue!30, align=center, anchor=west,
 ball/.style = {circle, draw, align=center, anchor=north, inner sep=0}]
 \node[rectangle,text width=1.2cm,anchor=base] (A0) at (1,-0.3) {Real};
 \node[rectangle,text width=0.9cm,anchor=base] (B0) at (4,-0.3) {Optimized};
-\node[rectangle,text width=1.2cm,anchor=base, fill=orange!20] (A1) at (1,-1.0) {Valence};
-\node[rectangle,text width=1.2cm,anchor=base, fill=blue!20] (A2) at (1,-1.5) {Mood};
-\node[rectangle,text width=1.2cm,anchor=base, fill=blue!20] (A3) at (1,-2.0) {Tense};
+\node[rectangle,text width=1.2cm,anchor=base] (A1) at (1,-1.0) {Valence};
+\node[rectangle,text width=1.2cm,anchor=base] (A2) at (1,-1.5) {Mood};
+\node[rectangle,text width=1.2cm,anchor=base] (A3) at (1,-2.0) {Tense};
 \node[rectangle,text width=1.2cm,anchor=base] (A4) at (1,-2.5) {Nominal};
-\node[rectangle,text width=1.2cm,anchor=base, fill=purple!20] (A5) at (1,-3.0) {Agreement};
-\node[rectangle,text width=1.2cm,anchor=base, fill=orange!20] (B1) at (4,-1.0) {Valence};
-\node[rectangle,text width=1.2cm,anchor=base, fill=blue!20] (B2) at (4,-1.5) {Tense};
-\node[rectangle,text width=1.2cm,anchor=base, fill=blue!20] (B3) at (4,-2.0) {Mood};
-\node[rectangle,text width=1.2cm,anchor=base, fill=purple!20] (B4) at (4,-2.5) {Agreement};
+\node[rectangle,text width=1.2cm,anchor=base] (A5) at (1,-3.0) {Agreement};
+\node[rectangle,text width=1.2cm,anchor=base] (B1) at (4,-1.0) {Valence};
+\node[rectangle,text width=1.2cm,anchor=base] (B2) at (4,-1.5) {Tense};
+\node[rectangle,text width=1.2cm,anchor=base] (B3) at (4,-2.0) {Mood};
+\node[rectangle,text width=1.2cm,anchor=base] (B4) at (4,-2.5) {Agreement};
 \node[rectangle,text width=1.2cm,anchor=base] (B5) at (4,-3.0) {Nominal};
 \draw[->] (A1.east) to (B1.west);
 \draw[->] (A2.east) to (B3.west);
